--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.4",
     "@react-navigation/stack": "^6.0.11",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
