--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-animatable": "^1.3.3",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-json-tree": "^1.3.0",
     "react-native-paper": "^4.9.2",
     "react-native-qrcode-svg": "^6.1.1",
@@ -29,6 +30,7 @@
     "react-native-screens": "~3.4.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "12.1.1",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
