--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-stopwatch-timer": "^0.0.21",
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "expo-print": "~10.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
