--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "axios": "^0.23.0",
     "expo": "~42.0.1",
     "expo-font": "~9.2.1",
+    "expo-print": "~10.2.1",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
@@ -32,8 +34,7 @@
     "react-native-stopwatch-timer": "^0.0.21",
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12",
-    "expo-print": "~10.2.1"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
