--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
-    "expo-updates": "~0.8.2"
+    "expo-updates": "~0.8.2",
+    "expo-barcode-scanner": "~10.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
