--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@react-navigation/stack": "^6.0.11",
     "axios": "^0.23.0",
     "expo": "~42.0.1",
+    "expo-barcode-scanner": "~10.2.2",
+    "expo-device": "~3.3.0",
     "expo-font": "~9.2.1",
     "expo-print": "~10.2.1",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
+    "expo-updates": "~0.8.2",
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -34,9 +37,7 @@
     "react-native-stopwatch-timer": "^0.0.21",
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12",
-    "expo-updates": "~0.8.2",
-    "expo-barcode-scanner": "~10.2.2"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
