--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/stack": "^6.0.11",
     "axios": "^0.23.0",
     "expo": "~42.0.1",
+    "expo-asset": "8.3.3",
+    "expo-av": "~9.2.3",
     "expo-barcode-scanner": "~10.2.2",
     "expo-device": "~3.3.0",
     "expo-font": "~9.2.1",
