--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-animatable": "^1.3.3",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-json-tree": "^1.3.0",
     "react-native-paper": "^4.9.2",
