--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-native-animatable": "^1.3.3",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-image-pan-zoom": "^2.1.12",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-json-tree": "^1.3.0",
     "react-native-paper": "^4.9.2",
     "react-native-qrcode-svg": "^6.1.1",
