add qr to print

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-updates": "~0.8.2",
     "expo-web-browser": "~9.2.0",
     "moment": "^2.29.1",
+    "qrcode-generator": "^1.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
