--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-barcode-scanner": "~10.2.2",
     "expo-device": "~3.3.0",
     "expo-font": "~9.2.1",
+    "expo-notifications": "~0.12.3",
     "expo-print": "~10.2.1",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
