--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-application": "~3.2.0",
     "expo-asset": "8.3.3",
     "expo-av": "~9.2.3",
+    "expo-background-fetch": "~9.2.2",
     "expo-barcode-scanner": "~10.2.2",
     "expo-device": "~3.3.0",
     "expo-font": "~9.2.1",
@@ -25,6 +26,7 @@
     "expo-print": "~10.2.1",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
+    "expo-task-manager": "~9.2.2",
     "expo-updates": "~0.8.2",
     "expo-web-browser": "~9.2.0",
     "moment": "^2.29.1",
