--- a/package.json
+++ b/package.json
@@ -14,26 +14,26 @@
     "@react-navigation/native-stack": "^6.2.4",
     "@react-navigation/stack": "^6.0.11",
     "axios": "^0.23.0",
-    "expo": "~42.0.1",
-    "expo-application": "~3.2.0",
-    "expo-asset": "8.3.3",
-    "expo-av": "~9.2.3",
-    "expo-background-fetch": "~9.2.2",
-    "expo-barcode-scanner": "~10.2.2",
-    "expo-device": "~3.3.0",
-    "expo-font": "~9.2.1",
-    "expo-notifications": "~0.12.3",
-    "expo-print": "~10.2.1",
-    "expo-splash-screen": "~0.11.2",
-    "expo-status-bar": "~1.0.4",
-    "expo-task-manager": "~9.2.2",
-    "expo-updates": "~0.8.2",
-    "expo-web-browser": "~9.2.0",
+    "expo": "^44.0.0",
+    "expo-application": "~4.0.1",
+    "expo-asset": "~8.4.6",
+    "expo-av": "~10.2.0",
+    "expo-background-fetch": "~10.1.0",
+    "expo-barcode-scanner": "~11.2.0",
+    "expo-device": "~4.1.0",
+    "expo-font": "~10.0.4",
+    "expo-notifications": "~0.14.0",
+    "expo-print": "~11.1.0",
+    "expo-splash-screen": "~0.14.1",
+    "expo-status-bar": "~1.2.0",
+    "expo-task-manager": "~10.1.0",
+    "expo-updates": "~0.11.7",
+    "expo-web-browser": "~10.1.0",
     "moment": "^2.29.1",
     "qrcode-generator": "^1.4.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
     "react-native-animatable": "^1.3.3",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-gifted-chat": "^0.16.3",
@@ -41,16 +41,18 @@
     "react-native-json-tree": "^1.3.0",
     "react-native-paper": "^4.9.2",
     "react-native-qrcode-svg": "^6.1.1",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-stopwatch-timer": "^0.0.21",
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "0.17.1",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
