--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "0.17.1",
     "react-redux": "^8.0.2",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
