--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "expo-screen-orientation": "~3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
